Add styles to contact and hire page

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,5 +1,5 @@
 <div
-  class="about-background bg-[#f1d0c3] pt-0 mt-0 text-[24px]/[40px] text-center"
+  class="about-background bg-[#f1d0c3] pt-0 mt-0 text-[24px]/[40px] text-center pb-[50px] px-[20px] space-y-6"
 >
   <p class="first-paragraph max-w-[800px] mx-auto">
     Welcome to The Play House — a beautifully designed space where little
