--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,4 +1,31 @@
-<p>Bollocks I didn’t even think about a phone system fml</p>
-<p>&#64;themarlboroughplayhouse</p>
-<p>The Old Chapel, The Parade, Marlborough SNsickers</p>
-<p>info&#64;themarlboroughplayhouse.com</p>
+<div class="contact-background text-[24px]/[40px] text-center py-[20px]">
+  <div class="flex justify-center">
+    <div class="w-1/2 text">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19904.293238232585!2d-1.7663807256836035!3d51.42075330000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48715befa4fb19bd%3A0x7a86952a67f4ef1!2sThe%20Parade%20Cinema%20Marlborough!5e0!3m2!1sen!2suk!4v1768325570077!5m2!1sen!2suk"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+    <div class="w-1/2 text-left pl-10">
+      <p>Bollocks I didn’t even think about a phone system fml</p>
+      <p>
+        <a
+          href="https://www.instagram.com/themarlboroughplayhouse"
+          target="_blank"
+          >&#64;themarlboroughplayhouse</a
+        >
+      </p>
+      <p>The Old Chapel, The Parade, Marlborough SNsickers</p>
+      <p>
+        <a href="mailto:info@themarlboroughplayhouse.com"
+          >info&#64;themarlboroughplayhouse.com</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
