--- a/src/app/pages/private-hire-page/private-hire-page.component.html
+++ b/src/app/pages/private-hire-page/private-hire-page.component.html
@@ -1,26 +1,34 @@
 <app-navbar></app-navbar>
-<p>
-  Looking for the perfect place to celebrate, gather or just enjoy exclusive
-  time with your little ones? You can hire The Play Room all to yourself!
-</p>
-<p>
-  Whether it’s a birthday party, a special event, or just a private play session
-  with friends and family, our calm and beautiful space is available for
-  exclusive use — giving you full access to our play village, ball pit, and cosy
-  corners.
-</p>
-<h2>Keep it simple…</h2>
-<p>
-  Hire the space and enjoy relaxed playtime with snacks and coffees available to
-  buy from our café.
-</p>
-<h2>... let us take care of everything</h2>
-<p>
-  We can handle all the extras — from decorations, party bags and themed invites
-  to entertainment and sweet treats — so you can sit back and enjoy the magic
-  with your little one. Put together a bespoke package to suit you.
-</p>
-<p>Private hire starts from £150.</p>
-<p>To find out more or book your event, email us at:</p>
-<p>info&#64;themarlboroughplayhouse.com</p>
-<p>We can’t wait to help you celebrate!</p>
+<div
+  class="private-hire-background text-[24px]/[40px] text-center py-[20px] px-[30px] max-w-[800px] mx-auto"
+>
+  <p>
+    Looking for the perfect place to celebrate, gather or just enjoy exclusive
+    time with your little ones? You can hire The Play Room all to yourself!
+  </p>
+  <p>
+    Whether it’s a birthday party, a special event, or just a private play
+    session with friends and family, our calm and beautiful space is available
+    for exclusive use — giving you full access to our play village, ball pit,
+    and cosy corners.
+  </p>
+  <h2>Keep it simple…</h2>
+  <p>
+    Hire the space and enjoy relaxed playtime with snacks and coffees available
+    to buy from our café.
+  </p>
+  <h2>... let us take care of everything</h2>
+  <p>
+    We can handle all the extras — from decorations, party bags and themed
+    invites to entertainment and sweet treats — so you can sit back and enjoy
+    the magic with your little one. Put together a bespoke package to suit you.
+  </p>
+  <p>Private hire starts from £150.</p>
+  <p>To find out more or book your event, email us at:</p>
+  <p>
+    <a href="mailto:info@themarlboroughplayhouse.com"
+      >info&#64;themarlboroughplayhouse.com</a
+    >
+  </p>
+  <p>We can’t wait to help you celebrate!</p>
+</div>
