update landing page date

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -9,7 +9,7 @@
   <div class="text-center mt-4">
     <p class="swing-in-top-fwd-1">
       We’re working super hard to have The Marlborough Playhouse ready to open
-      our doors Winter 2025.
+      our doors Spring 2026.
     </p>
     <p class="swing-in-top-fwd-2">
       To stay up to date and be the first to know when sessions are available to
